[package]
name = "codenamr-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0"
clap = { version = "4.0", features = ["derive"] }
arboard = "3.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true