[package]
name = "codenamr"
version = "0.1.0"
edition = "2021"
description = "A dead simple and lightning fast CLI for generating codenames."
license = "AGPL-3.0-only"
documentation = "https://docs.rs/codenamr"
homepage = "https://github.com/thomasboom/CodeNamr"
repository = "https://github.com/thomasboom/CodeNamr"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0"
clap = { version = "4.0", features = ["derive"] }
arboard = "3.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
